# MindG

./: .gitignore  CHANGELOG.md  README.md  env.example  main.py  pyproject.toml  requirements.txt  uvicorn_config.py
archive/esp32_firmware_legacy/main/: CMakeLists.txt  idf_component.yml  tusb_config.h
archive/esp32_firmware_legacy/main/apps/: dify_app.cpp  dify_app.h  smart_response_app.cpp  smart_response_app.h
archive/esp32_firmware_legacy/main/core/: app_state.cpp  app_state.h  main.cpp  state_coordinator.cpp  state_coordinator.h
archive/esp32_firmware_legacy/main/drivers/: audio_handler.cpp  audio_handler.h  button_handler.cpp  button_handler.h  i2c_bus_manager.cpp  i2c_bus_manager.h  motion_sensor.cpp  motion_sensor.h
archive/esp32_firmware_legacy/main/fonts/: README.md  regenerate_font_16_extended.ps1  regenerate_font_16_uncompressed.ps1
archive/esp32_firmware_legacy/main/managers/: asset_manager.cpp  asset_manager.h  battery_manager.cpp  battery_manager.h  config_manager.cpp  config_manager.h  font_manager.cpp  font_manager.h  rtc_manager.cpp  rtc_manager.h  ui_manager.cpp  ui_manager.h  wallpaper_manager.cpp  wallpaper_manager.h  wifi_manager.cpp  wifi_manager.h
archive/esp32_firmware_legacy/main/network/: ntp_sync.cpp  ntp_sync.h  weather_api.cpp  weather_api.h  websocket_client.cpp  websocket_client.h
archive/esp32_firmware_legacy/main/screens/: launcher.cpp  launcher.h  loading_screen.cpp  loading_screen.h  standby_screen.cpp  standby_screen.h  watch_face_enhanced.cpp  watch_face_enhanced.h
archive/esp32_firmware_legacy/main/storage/: sd_storage.cpp  sd_storage.h  usb_msc.cpp  usb_msc.h
archive/esp32_firmware_legacy/main/utils/: display_utils.cpp  display_utils.h  ui_icons.cpp  (+5 more)
(+803 files in other folders)
