idf_component_register(
    SRCS 
        "core/main.cpp"
        "core/app_state.cpp"
        "core/state_coordinator.cpp"
        "managers/battery_manager.cpp"
        "managers/config_manager.cpp"
        "managers/font_manager.cpp"
        "managers/asset_manager.cpp"
        "managers/rtc_manager.cpp"
        "managers/ui_manager.cpp"
        "managers/wallpaper_manager.cpp"
        "managers/wifi_manager.cpp"
        "screens/launcher.cpp"
        "screens/loading_screen.cpp"
        "screens/standby_screen.cpp"
        "screens/watch_face_enhanced.cpp"
        "drivers/audio_handler.cpp"
        "drivers/button_handler.cpp"
        "drivers/motion_sensor.cpp"
        "drivers/i2c_bus_manager.cpp"
        "network/websocket_client.cpp"
        "network/weather_api.cpp"
        "network/ntp_sync.cpp"
        "storage/sd_storage.cpp"
        "storage/usb_msc.cpp"
        "utils/qrcode_generator.cpp"
        "utils/echo_cancellation.cpp"
        "utils/ui_icons.cpp"
        "utils/display_utils.cpp"
        "apps/smart_response_app.cpp"
        "apps/dify_app.cpp"
        "fonts/chinese_font_16.c"
    INCLUDE_DIRS 
        "."
        "core"
        "managers"
        "screens"
        "drivers"
        "network"
        "storage"
        "utils"
        "apps"
        "../components"
    PRIV_REQUIRES 
        nvs_flash
        esp_wifi
        esp_http_client
        esp_https_ota
        mbedtls
        driver
        esp_driver_i2c
        esp_timer
        spi_flash
        spiffs
        fatfs
        lvgl__lvgl
        json
        esp_tinyusb
)
